# godot-second-order-animations

./: Cargo.toml  godot-second-order-animations.gdextension  readme.md
src/: lib.rs
src/animators/: mod.rs
src/second_order_systems/: mod.rs
